Created working Serializer